HDIV CHANGELOG
==============
http://www.hdiv.org

Release 2.1.8 
==================================

 * Fix multipart issue in Struts1 (https://github.com/hdiv/hdiv/issues/59).
 * Fix multipart issue in Spring MVC (https://github.com/hdiv/hdiv/issues/62).
 
Release 2.1.7
==================================

 * Memory and performance optimizations.
 * New 'hdiv-thymeleaf' module for Thymeleaf template engine support.
 * Create default error page content if no errorPage is configured.
 * @Configuration support for JavaConfig as an alternative to XML.
 * Spring >= 4.0.0 is required to use JavaConfig and @EnableHdivWebSecurity feature
 * Ability to include an inner RequestDataValueProcessor to HdivRequestDataValueProcessor.
 * Spring Security CSRF token integration. Both, HDIV and Spring Security tokens are created.
 * New 'reuseExistingPageInAjaxRequest' configuration option. If it is activated, Ajax requests don't create a new page and reuse the existing one.
 * Move CipherTag to hdiv-core.
 * New 'longLivingPages' feature to configure pages which link and forms never expire.
 * Create a custom token for form elements.
 
Release 2.1.6
==================================

 * Fix form multipart issue (https://github.com/hdiv/hdiv/issues/44).
 * New 'org.hdiv.regex' package for Java regular expression execution abstraction.
 * New 'hdiv-docs' module with official documentation.
 * Include original parameter value in attack logs

Release 2.1.5
==================================

 * Java >= 1.5 is required.
 * Fix form field confidentiality error on RESTfull configuration (https://github.com/hdiv/hdiv/issues/31).
 * Hash and Cipher strategy support for Ajax requests (https://github.com/hdiv/hdiv/issues/36).
 * Support Spring 4.0.0 (4.0.0.BUILD-SNAPSHOT) and changes to org.springframework.web.servlet.support.RequestDataValueProcessor

Release 2.1.4
==================================

 * Use request method to define StartPages (https://github.com/hdiv/hdiv/issues/5).